--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,15 +14,27 @@ description: Aplicacion para apoyo a trabajadores independientes
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  cloud_firestore: ^0.13.4+2
+  firebase_auth: 0.15.5+3
+  firebase_storage: ^3.1.6
+  image_picker: ^0.6.7+1
+  fluttertoast: ^4.0.1
+  font_awesome_flutter: '>= 4.7.0'
+  flutter_facebook_auth: ^0.1.1
+  google_sign_in: ^3.0.0
+  intl: ^0.16.1
+  image_cropper: ^1.2.3
+  flutter_easyloading: ^2.2.1
+  rxdart: ^0.22.6
+  flutter_rating_bar: ^3.2.0
+  url_launcher: ^5.4.1
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
@@ -34,10 +46,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  assets:
+    - assets/img/wanyob.png
+    - assets/img/avatarimage.png
+    - assets/img/limpieza.jpg
+    - assets/img/mecanico.jpg
+    - assets/img/plomero.jpg
+    - assets/files/municipios.txt
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
